# neatlogs-demo-agents

./: .gitignore
.specstory/: .project.json  statistics.json
.specstory/history/: 2026-06-05_10-58-12Z-poetry-environment-setup-sequence.md  2026-06-06_08-52-50Z-handling-missing-orders-in-crm.lookup_order.md  2026-06-06_09-29-48Z-web-search-tool-timeout-and-retry-latency.md  2026-06-06_09-55-03Z-resiliency-and-error-handling-for-inventory.lookup.md  2026-06-06_10-05-00Z-resiliency-and-error-handling-for-inventory.lookup.md  2026-06-06_10-13-49Z-high-latency-issue-in-summarization.md  2026-06-06_10-40-34Z-structured-output-and-verification-for-content-moderation.md
agents/: .gitignore  pyproject.toml  skills-lock.json  version.md
agents/docs/: flaky_api_agent.md  heavy_report_agent.md  moderation_demo.md  research_agent.md  support_bot.md
agents/src/agents/: __init__.py  data_extractor.py  flaky_api_agent.py  gemini_rate_limit.py  heavy_report_agent.py  main.py  meeting_tasks.py  moderation_demo.py  rag_pinecone.py  research_agent.py  sdk_agno.py  sdk_chatbot_sessions.py  sdk_crewai.py  sdk_custom_orchestration.py  sdk_dspy.py  sdk_google_adk.py  sdk_hermes.py  sdk_langchain.py  sdk_langgraph.py  sdk_openai_agents.py  sdk_openai_agents_simple.py  sdk_openai_simple.py  sdk_openrouter.py  sdk_pydantic_ai.py  sdk_python.py  sdk_rag.py  sdk_strands.py  sdk_strands_simple.py  seed_pinecone.py  support_bot.py
agents/src/agents/crewai_crew/: crew_agents.py  main.py  tasks.py
agents/src/agents/data/: knowledge_base.py
doc-testing/: README.md  package-lock.json  package.json  skills-lock.json
doc-testing/.claude/skills/neatlogs-observability/: SKILL.md
doc-testing/src/: index.ts  sdk_ai.ts  sdk_mastra.ts  sdk_openai_agents.ts  sdk_openai_agents_simple.ts  sdk_openai_simple.ts  sdk_openrouter.ts  sdk_pi_agent.ts  sdk_strands.ts  sdk_strands_simple.ts
sdk-testing/: .env.example  .gitignore  pyproject.toml
sdk-testing-ts/: package.json
sdk-testing-ts/src/: claude_agent_demo.ts  langchain_demo.ts  openai_demo.ts
sdk-testing/src/sdk_testing/: crewai_demo.py  langchain_demo.py  openai_demo.py
wizard-test/: package-lock.json  package.json
wizard-test/.claude/skills/neatlogs-observability/: SKILL.md
wizard-test/.cursor/: mcp.json
wizard-test/src/: index.ts
